adding sprockets lock, breaking up css scss

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,8 @@
 @import "odk_fields";
 @import "edit";
 @import "main";
-@import "angular-ui-tree";
+@import "angular-ui-tree.css";
+@import "angular-ui-tree.scss";
 @import "ng-ui-tree-overrides";
 @import "home";
 @import "product";
