--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -59,29 +59,20 @@
 </nav>
 
 <script type="text/ng-template" id="modalTemplate.html">
-  <div class="modal-content">
-      <div class="modal-header center">
-        <h2>
-          Log in
-          <button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
-        </h2>
+  <div class="card-block">
+    <h4 class="card-title">Sign in</h4><button type="button" class="close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+    <div class="card-block">
+      <%= render '/user_sessions/form', user: @user %>
+    </div>
+    <div class="card-block">
+      <p class="card-text">Click <a class="btn btn-primary" data-method="get" href="/signup" role="button">Sign up!</a> to create a new account</p>
+      <div class="card-block">
+      <div class="card-block">
+        <p class="card-text"><small class="text-muted">Forgot your password?</small></p>
+        <%= render '/user_sessions/forgot_password_form' %>
       </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 modal-body">              
-          <%= render '/user_sessions/form', user: @user %>
-        </div>
-        <div class="col-md-8 col-md-offset-2 modal-body">
-          <h4>Click <%= link_to "/signup", method: :get do %>
-              <button type="button" class="btn btn-success">Sign up</button>
-            <% end %> to create a new account</h4>
-        </div>
-      </div>
-      <div class="row">        
-        <div class="col-md-8 col-md-offset-2 modal-body">
-          <h4>Forgot your password?</h4>
-          <%= render '/user_sessions/forgot_password_form' %>
-        </div>
-      </div>
+    </div>
   </div>
 </script>
 
