--- a/public/templates/mappings.html
+++ b/public/templates/mappings.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row" ng-show="mappingCtrl.ui.initializing">
         <div class="col-md-2 col-md-offset-5">
-          <div class="well text-center">
+          <div class="card text-center">
             <h1>
             <i class="fa fa-spinner fa-spin"></i>
             </h1>
