--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,7 @@
       }
     </script>
     <base href="/">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
