--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -15,7 +15,7 @@
 .headline-text
   font-weight: 200
 .headline
-  padding: rem-calc(143px) rem-calc(175px) rem-calc(95px) rem-calc(175px)
+  padding: 5em 7em 4em 7em
   background-color: $base
   background-image: image-url("wow_bg.jpg")
   color: $bg-color
