--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,5 +39,7 @@
       </div>
     </div>
     <footer class="footer" ng-include="'/the_bridge_templates/footer.html'"></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   </body>
 </html>
