setting up packery on market index

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -43,7 +43,7 @@ a:hover {
 
 a {
   color: inherit;
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 html {
@@ -543,11 +543,3 @@ b, strong {
 .push-down {
   margin-bottom: 2em;
 }
-
-#grid[data-columns]::before {
-  content: '3 .column.size-1of3';
-}
-
-/* These are the classes that are going to be applied: */
-.column { float: left; }
-.size-1of3 { width: 33.333%; }
