--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse navbar-fixed-top navbar-nav" ng-controller="LoginController as loginCtrl">
+<nav class="navbar navbar-main navbar-dark bg-inverse navbar-fixed-top navbar-nav" ng-controller="LoginController as loginCtrl">
   <div class="container">
     <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
       &#9776;
