--- a/app/assets/stylesheets/marketplace.css.sass
+++ b/app/assets/stylesheets/marketplace.css.sass
@@ -132,14 +132,14 @@ $accordion-danger: #e8564c
 
 .accordion-container
   background: $nav
+  background-image: image-url("noise.png")
   display: none
 
 // refactor could be DRY-er
 .custom-accord
-  margin-top: 2px
   .panel
     border-radius: 0
-    box-shadow: 2px 2px 0 0 $accordion-dark
+
     .panel-heading
       background: $accordion-base
       border-radius: 0
@@ -149,7 +149,7 @@ $accordion-danger: #e8564c
       .panel-title
         font-size: 1em
         font-weight: bold
-        box-shadow: 2px 2px 0 0 $accordion-dark
+
         a
           &:hover, &:focus
             text-decoration: none
@@ -195,9 +195,8 @@ $accordion-danger: #e8564c
   text-transform: uppercase
   font-size: 1em
   font-weight: bold
-  box-shadow: 2px 2px 0 0 $accordion-dark
+
   cursor: pointer
-  margin-top: 2px
   transition: all .25s
   &:hover, a:hover
     color: white
