--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -20,8 +20,6 @@
 
   .banner-headline {
     padding-top: rem-calc(75px);
-    // padding-bottom: rem-calc(50px);
-    // text-shadow: $dark 0.05em 0.05em 0.1em;
     color: $bg-color;
     font-size: rem-calc(40px);
     line-height: 1.3;
@@ -49,16 +47,26 @@
   }
 
   .numbers h4 {
-    margin-top: 3em;
+    position: absolute;
+    bottom: 3em;
+    left: 0;
+    right: 0;
     color: $bg-color;
-    font-size: 1.8rem;
-    line-height: 2.8rem;
+    font-size: 1rem;
+    line-height: 1.6rem;
 
     .digits {
       color: $accent;
       font-weight: $bold;
       font-size: rem-calc(36px);
     }
+  }
+
+  .p-logo {
+    max-height: 5em;
+    max-width: 5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
   }
 
 }
