--- a/app/assets/stylesheets/mapping_fields.css.scss
+++ b/app/assets/stylesheets/mapping_fields.css.scss
@@ -45,7 +45,7 @@
     margin: 1px;
     padding: 5px 10px;
 
-    border-radius: 0 !important;
+    // border-radius: 0 !important;
 
     .required {
       background-color: #D9534F;
