--- a/app/assets/stylesheets/devs.css.scss
+++ b/app/assets/stylesheets/devs.css.scss
@@ -4,55 +4,9 @@
     padding-top: 40px;
   }
 
-  .flat .plan {
-    border-radius: 6px;
-    list-style: none;
-    padding: 0 0 20px;
-    margin: 0 0 15px;
-    background: $nav;
-    text-align: center;
-  }
-
-  .flat .plan li {
-    padding: 10px 15px;
-    -webkit-transition: 300ms;
-    transition: 300ms;
-  }
-
-  .flat .plan li.plan-price {
-    font-size: 2em;
-    border-top: 0;
-  }
-
-  .flat .plan li.plan-name {
-    border-radius: 6px 6px 0 0;
-    padding: 15px;
-    font-size: 24px;
-    line-height: 24px;
-    color: $light;
-    background: $base;
-    margin-bottom: 30px;
-    border-top: 0;  
-  }
-
-  .flat .plan li > strong {
-  }
-
-  .flat .plan li.plan-action {
-    margin-top: 10px;
-    border-top: 0;
-  }
-
-  .flat .plan.featured li.plan-name {
-    background: $dark;
-  }
-
-  .flat .plan.featured:hover li.plan-name {
-    background: $red-accent;
-  }
-
-  .flat .plan:hover li.plan-name {
-    background: $dark;
+  .description {
+    background-color: $nav;
+    background-image: image-url("noise.png");
   }
 
 }
